appId: ai.q9labs.track
---
- tapOn:
    point: 50%,75%
- eraseText: 500
- inputText: Push Verification 033850
